--- a/example-configuration.yml
+++ b/example-configuration.yml
@@ -3,6 +3,14 @@ lovelace:
   resources:
     - url: /hacsfiles/lovelace-auto-entities/auto-entities.js
       type: module
+    - url: /hacsfiles/lovelace-mushroom/mushroom.js
+      type: module
+    - url: /hacsfiles/stack-in-card/stack-in-card.js
+      type: module
+    - url: /hacsfiles/lovelace-card-mod/card-mod.js
+      type: module
+    - url: /hacsfiles/mini-graph-card/mini-graph-card-bundle.js
+      type: module
   dashboards:
     dashy-mcdashboardface:
       mode: yaml
